# RockHero

./: .clang-format  .clang-tidy  .cmake-format.py  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  conanfile.txt
apps/rock-hero/: CMakeLists.txt  main.cpp
apps/rock-hero-editor/: CMakeLists.txt  editor_settings.cpp  editor_settings.h  editor_window.cpp  editor_window.h  main.cpp  main_window.cpp  main_window.h  waveform_display.cpp  waveform_display.h
apps/rock-hero-editor/include/: EditorWindow.h  WaveformDisplay.h
apps/rock-hero-editor/src/: EditorWindow.cpp  WaveformDisplay.cpp  main.cpp
apps/rock-hero-editor/tests/: CMakeLists.txt  test_editor_settings.cpp
apps/rock-hero-game/: CMakeLists.txt  main.cpp
apps/rock-hero-game/src/: main.cpp
apps/rock-hero/resources/: rock_hero.desktop
libs/audio-engine/: CMakeLists.txt
libs/audio-engine/include/: AudioEngine.h
libs/audio-engine/src/: AudioEngine.cpp  audio_engine.cpp
libs/rock-hero-audio/: CMakeLists.txt
libs/rock-hero-audio-engine/: CMakeLists.txt
libs/rock-hero-audio-engine/src/: audio_engine.cpp  audio_thumbnail.cpp
libs/rock-hero-audio/src/: audio_engine.cpp  engine.cpp  juce_interop.h  thumbnail.cpp  tracktion_thumbnail.cpp  tracktion_thumbnail.h
libs/rock-hero-audio/tests/: CMakeLists.txt  test_audio.cpp  test_edit.cpp  test_engine.cpp  test_thumbnail_source.cpp  test_transport.cpp
libs/rock-hero-core/: CMakeLists.txt
libs/rock-hero-core/src/: project.cpp  project_io.cpp  project_io.h  project_loader.cpp  psarc_importer.cpp  psarc_project_importer.cpp  rock_importer.cpp  session.cpp  song.cpp
libs/rock-hero-core/tests/: CMakeLists.txt  test_arrangement.cpp  test_chart.cpp  test_difficulty.cpp  test_project.cpp  test_project_loader.cpp  test_session.cpp  test_song.cpp  test_timeline.cpp
libs/rock-hero-ui/: CMakeLists.txt
libs/rock-hero-ui/src/: arrangement_view.cpp  audio_clip_view.cpp  edit_coordinator.cpp  editor.cpp  editor_controller.cpp  editor_view.cpp  project_loader.cpp  track_view.cpp  transport_controls.cpp  waveform_display.cpp
libs/rock-hero-ui/tests/: CMakeLists.txt  test_arrangement_view.cpp  test_audio_clip_view.cpp  test_edit_coordinator.cpp  test_editor.cpp  test_editor_controller.cpp  test_editor_view.cpp  test_project_loader.cpp  test_track_view.cpp  test_transport_controls.cpp
rock-hero-common/: CMakeLists.txt
rock-hero-common/audio/: CMakeLists.txt  README.md
rock-hero-common/audio/api/: CMakeLists.txt
rock-hero-common/audio/impl/: CMakeLists.txt
rock-hero-common/audio/src/: audio_device_configuration_error.cpp  audio_device_error.cpp  audio_device_settings.cpp  audio_normalization.cpp  audio_path_util.h  engine.cpp  engine_device_config.cpp  engine_impl.h  engine_live_input.cpp  engine_live_rig.cpp  engine_plugin_host.cpp  engine_song_audio.cpp  engine_transport.cpp  input_calibration.cpp  live_input_error.cpp  live_rig_error.cpp  live_rig_gain_plugin.cpp  live_rig_gain_plugin.h  meter_reader.h  monitoring_mode_transition.cpp  monitoring_mode_transition.h  plugin_catalog_cache.cpp  plugin_catalog_cache.h  plugin_host_error.cpp  plugin_move_index.h  plugin_scan.cpp  plugin_scan.h  song_audio_error.cpp  tone_document.cpp  tone_document.h  tracktion_instrument_wave_device_mapping.cpp  tracktion_instrument_wave_device_mapping.h  tracktion_live_wave_device_mapping.cpp  tracktion_live_wave_device_mapping.h  tracktion_thumbnail.cpp  tracktion_thumbnail.h
rock-hero-common/audio/tests/: CMakeLists.txt  test_audio.cpp  test_audio_config_store.cpp  test_audio_device_settings.cpp  test_audio_normalization.cpp  test_audio_transcode.cpp  test_edit.cpp  test_engine.cpp  test_engine_behaviors.cpp  test_gain.cpp  test_input_calibration.cpp  test_input_calibration_workflow.cpp  test_live_input_monitor.cpp  test_live_rig_gain_plugin.cpp  test_monitoring_mode_transition.cpp  test_multi_tone_rack.cpp  test_playback_clock.cpp  test_playback_clock_extrapolator.cpp  test_plugin_catalog_cache.cpp  test_plugin_host.cpp  test_plugin_move_index.cpp  test_plugin_state_hygiene.cpp  test_plugin_window_shortcuts.cpp  test_song_audio.cpp  test_tempo_mirror.cpp  test_thumbnail_source.cpp  test_tone_automation_curve.cpp  test_tone_automation_rebuild.cpp  test_tone_branch_gain_plugin.cpp  test_tone_file.cpp  test_tracktion_instrument_wave_device_mapping.cpp  test_tracktion_live_wave_device_mapping.cpp  test_tracktion_plugin_id_preservation.cpp  test_transport.cpp  test_undo_spike.cpp
rock-hero-common/core/: CMakeLists.txt  README.md
rock-hero-common/core/src/: archive_error.cpp  json.cpp  juce_path.cpp  logger.cpp  logger_error.cpp  package_id.cpp  placeholder.cpp  project.cpp  project_io.cpp  project_io.h  psarc_importer.cpp  rock_importer.cpp  rock_song_package.cpp  session.cpp  song.cpp  song_package.cpp  song_package_error.cpp  tempo_map.cpp
rock-hero-common/core/tests/: CMakeLists.txt  test_application_identity.cpp  test_arrangement.cpp  test_chart.cpp  test_difficulty.cpp  test_fraction.cpp  test_grid_arithmetic.cpp  test_highway_camera.cpp  test_highway_projection.cpp  test_highway_tail.cpp  test_highway_window.cpp  test_juce_path.cpp  test_logger.cpp  test_package_description.cpp  test_project.cpp  test_rock_song_package.cpp  test_session.cpp  test_song.cpp  test_song_package.cpp  test_tab_projection.cpp  test_tempo_map.cpp  test_timeline.cpp  test_tone_schedule.cpp  test_tone_track_edits.cpp  test_tone_track_normalize.cpp  test_tone_track_rules.cpp
rock-hero-common/ui/: CMakeLists.txt  README.md
rock-hero-editor/: CMakeLists.txt
rock-hero-editor/app/: CMakeLists.txt  main.cpp
rock-hero-editor/audio/: CMakeLists.txt  README.md
rock-hero-editor/core/: CMakeLists.txt  README.md
rock-hero-editor/ui/: CMakeLists.txt  README.md
rock-hero-game/: CMakeLists.txt
rock-hero-game/app/: CMakeLists.txt  README.md  main.cpp
rock-hero-game/audio/: CMakeLists.txt  README.md
rock-hero-game/core/: CMakeLists.txt  README.md
rock-hero-game/ui/: CMakeLists.txt  README.md
(+1430 files in other folders)
